# no-mistakes

./: .codacy.yml  .gitignore  .no-mistakes.yml  .oxlintrc.json  CLAUDE.md  Cargo.toml  README.md  codecov.yml  cspell.config.yaml  lcov-ntf.info  lcov-pac.info  lcov.info  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  sgconfig.yml  vitest.config.js
crates/no-mistakes/: Cargo.toml  build.rs
crates/no-mistakes/benches/: bench_playwright_load.rs  check.rs  core_analysis.rs  dependencies_large_repo.rs  graph_related.rs  impacted_checks.rs
crates/no-mistakes/benches/core_analysis/: aggregate.rs  fixtures.rs  graph.rs  observer.rs  reports.rs
crates/no-mistakes/src/: ast.rs  benchmark_support.rs  check.rs  check_discovery.rs  check_parallel.rs  check_runner.rs  check_tasks.rs  ci.rs  config.rs  data_pw.rs  data_pw_query.rs  diagnostics.rs  edge_index.rs  effects.rs  effects_query.rs  executable_file_tests.rs  flow.rs  flow_query.rs  flow_query_config.rs  flow_query_resource_tests.rs  flow_query_tests.rs  flow_query_timeout_tests.rs  flow_query_traverse.rs  flow_query_vitest_tests.rs  impacted_checks.rs  infra.rs  integration_tests.rs  invocation.rs  lib.rs  lockfile.rs  main.rs  napi_api.rs  perf_trace.rs  queues.rs  react.rs  registry_extension.rs  registry_extension_query.rs  routes.rs  rsc_callers.rs  rsc_callers_query.rs  (+7 more)
crates/no-mistakes/src/ast/: expression.rs  parsed_cache.rs  tests.rs
crates/no-mistakes/src/benchmark_support/: tests.rs
crates/no-mistakes/src/check/: output.rs
crates/no-mistakes/src/check_discovery/: preserved_roots.rs  project_reopen.rs  tests.rs  views.rs
crates/no-mistakes/src/check_runner/: enabled.rs  forbidden_plan.rs  prepared.rs  results.rs  tests.rs
crates/no-mistakes/src/check_tasks/: filesystem.rs  tests.rs
crates/no-mistakes/src/ci/: render.rs  tests.rs
crates/no-mistakes/src/cli/: mod.rs  output_format.rs  tests.rs  traversal.rs  traversal_impls.rs
crates/no-mistakes/src/codebase/: analysis_dataset.rs  analysis_session.rs  check_facts.rs  ci_workflows.rs  comment_only.rs  config.rs  glob_normalize.rs  import_usages.rs  markdown_sections.rs  mod.rs  package_deps.rs  playwright_coverage.rs  pnpm_lock.rs  storybook.rs  storybook_mdx.rs  swift.rs  terraform.rs  test_discovery.rs  test_filter.rs  timing.rs  ts_http_calls.rs  ts_process_spawn.rs  ts_resolver.rs  ts_symbols.rs  unique_exports.rs  workspaces.rs
crates/no-mistakes/src/config/: tests.rs
crates/no-mistakes/src/data_pw/: tests.rs
crates/no-mistakes/src/data_pw_query/: scan.rs  tests.rs
crates/no-mistakes/src/diagnostics/: context.rs  observer.rs  tests.rs
crates/no-mistakes/src/edge_index/: aliases.rs  build.rs  tests.rs  traversal.rs
crates/no-mistakes/src/effects_query/: extract.rs  prepared.rs  tests.rs
crates/no-mistakes/src/fetch/: file_analysis.rs  file_facts.rs  import_routes.rs  imports.rs  mod.rs  resolve.rs  route_analysis.rs  types.rs  (+3 more)
crates/no-mistakes/tests/: cli.rs  cli_check_banned_paths.rs  cli_check_repository_inventory.rs  cli_check_rules.rs  cli_check_rules2.rs  cli_check_rules_agents.rs  cli_ci.rs  cli_codebase_acceptance.rs  cli_diagnostics.rs  cli_extra.rs  cli_extra2.rs  cli_flow.rs  cli_format.rs  cli_format2.rs  cli_import_usages.rs  cli_infra_swift.rs  cli_invocation.rs  cli_lockfile.rs  cli_lockfile2.rs  cli_proxy.rs  cli_queries.rs  cli_react_usages.rs  cli_server.rs  cli_test_plan_config.rs  cli_test_plan_config2.rs  cli_test_plan_dotnet.rs  cli_test_plan_fallback.rs  cli_test_plan_project_discovery.rs  cli_test_plan_resources.rs  cli_test_plan_sample_when_limited.rs  cli_test_plan_swift_native_fallback.rs  cli_test_plan_swift_native_source.rs  cli_test_plan_targeted_triggers.rs  cli_tests_impact.rs  cli_tests_impact_diff.rs  cli_tests_impact_features.rs  cli_tests_impact_native.rs  cli_tests_impact_rendering.rs  cli_tests_impact_symbol.rs  cli_tests_impact_symbol_extra.rs  (+16 more)
(+5555 files in other folders)
