[package]
name = "no-mistakes"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Static analysis tools for codebase dependency and symbol queries"
repository = "https://github.com/jonathanong/no-mistakes"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
no-mistakes-core = { path = "../no-mistakes-core", version = "0.5.0" }
rayon = "1.10"
rustix = { version = "1.1", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3"

[[bench]]
name = "dependencies_large_repo"
harness = false
