[package]
name = "no-mistakes"
version = "0.31.7"
edition = "2021"
license = "MIT"
description = "Static analysis tools for codebase dependency and symbol queries"
repository = "https://github.com/jonathanong/no-mistakes"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6.2.1"
globset = "0.4"
hcl-rs = "0.19"
ignore = "0.4"
is-terminal = "0.4"
jsonc-parser = { version = "0.32", features = ["serde"] }
napi = { version = "3.9.0", features = ["napi8"] }
napi-derive = "3.5.6"
num_cpus = "1.16"
oxc_allocator = "0.139.0"
oxc_ast = "0.139.0"
oxc_ast_visit = "0.139.0"
oxc_diagnostics = "0.139.0"
oxc_parser = "0.139.0"
oxc_span = "0.139.0"
oxc_syntax = "0.139.0"
proc-macro2 = { version = "1", features = ["span-locations"] }
pulldown-cmark = "0.13"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
syn = { version = "2", features = ["full", "visit"] }
toml = "1.1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
criterion = "0.8.2"
predicates = "3"
tempfile = "3"

[build-dependencies]
napi-build = "2.3.2"

[[bench]]
name = "dependencies_large_repo"
harness = false

[[bench]]
name = "graph_related"
harness = false

[[bench]]
name = "check"
harness = false

[[bench]]
name = "bench_playwright_load"
harness = false
