[package]
name = "no-mistakes"
version = "0.34.0"
edition = "2021"
license = "MIT"
description = "Static analysis tools for codebase dependency and symbol queries"
repository = "https://github.com/jonathanong/no-mistakes"

[lib]
crate-type = ["rlib"]

[features]
test-instrumentation = []

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6.2.1"
directories = "6"
globset = "0.4"
hcl-rs = "0.19"
ignore = "0.4"
is-terminal = "0.4"
jsonc-parser = { version = "0.33", features = ["serde"] }
napi = { version = "3.9.0", features = ["napi8"] }
napi-derive = "3.5.6"
num_cpus = "1.16"
oxc_allocator = "0.139.0"
oxc_ast = "0.139.0"
oxc_ast_visit = "0.139.0"
oxc_diagnostics = "0.139.0"
oxc_parser = "0.139.0"
oxc_span = "0.139.0"
oxc_syntax = "0.139.0"
proc-macro2 = { version = "1", features = ["span-locations"] }
pulldown-cmark = "0.13"
rayon = "1.10"
regex = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_yaml = "0.9"
self_cell = "1.2.2"
syn = { version = "2", features = ["full", "visit"] }
toml = "1.1"
walkdir = "2"
wait-timeout = "0.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["process", "signal"] }
signal-hook = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[dev-dependencies]
assert_cmd = "2"
criterion = { package = "codspeed-criterion-compat", version = "=5.0.1" }
predicates = "3"
tempfile = "3"

[build-dependencies]
napi-build = "2.3.2"

[[bench]]
name = "core_analysis"
harness = false
required-features = ["test-instrumentation"]
